# Esp32VirtualUART

./: .envrc  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  partitions.csv  sdkconfig.defaults
.claude/: settings.local.json
.claude/skills/esp-build/: SKILL.md
.claude/skills/new-component/: SKILL.md
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md
components/config_store/: CMakeLists.txt  config_store.c
components/config_store/include/: config_store.h
components/dns_server/: CMakeLists.txt  dns_server.c
components/dns_server/include/: dns_server.h
components/ethernet_mgr/: CMakeLists.txt  ethernet_mgr.c
components/ethernet_mgr/include/: ethernet_mgr.h
components/port_cdc/: CMakeLists.txt  port_cdc.c  usb_descriptors.c
components/port_cdc/include/: port_cdc.h
components/port_core/: CMakeLists.txt  port.c  port_registry.c
components/port_core/include/: port.h  port_registry.h
components/port_tcp/: CMakeLists.txt  port_tcp.c
components/port_tcp/include/: port_tcp.h
components/port_uart/: CMakeLists.txt  port_uart.c
components/port_uart/include/: port_uart.h
components/routing/: CMakeLists.txt  route_engine.c  signal_router.c
components/routing/include/: route.h  signal_router.h
components/status_led/: CMakeLists.txt  status_led.c
components/status_led/include/: status_led.h
components/tinyusb/: CMakeLists.txt
components/web_server/: CMakeLists.txt  api_handler.c  idf_component.yml  web_server.c  ws_handler.c
components/web_server/include/: web_server.h
components/wifi_mgr/: CMakeLists.txt  idf_component.yml  wifi_mgr.c
components/wifi_mgr/include/: wifi_mgr.h
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.svelte
frontend/src/lib/: ConfigPanel.svelte  NodeEditor.svelte  PortNode.svelte  StatusBar.svelte  Wire.svelte  api.js
frontend/src/stores/: ports.js  routes.js  signals.js
main/: CMakeLists.txt  Kconfig.projbuild  main.c
thoughts/ledgers/: CONTINUITY_CLAUDE-esp32-virtual-uart.md
thoughts/shared/handoffs/general/: 2026-02-16_14-56_project-onboarding.yaml  2026-02-16_15-36_wifi-ui-and-perf-tuning.yaml  2026-02-16_17-47_esp32-p4-migration.yaml  2026-02-16_22-55_esp-hosted-version-pin.yaml  2026-02-16_23-52_usb-cdc-enumeration-fix.yaml  2026-02-17_00-47_combined-interface-cdc.yaml
tools/: patch_dfifo.py  patch_tusb_dual.py
